missing whitespace in style avoid CSS specificity

--- a/addons/mail/static/src/owl/components/composer/composer.scss
+++ b/addons/mail/static/src/owl/components/composer/composer.scss
@@ -181,13 +181,8 @@
     }
 }
 
-.o_Composer_buttons:not(.o-composer-is-compact) {
+.o_Composer_buttons {
     border: 0;
-
-    .o_Composer_toolButtons{
-        border-bottom: 0;
-        border-radius: initial;
-    }
 }
 
 .o_Composer_buttonSend {
@@ -244,6 +239,11 @@
     background-color: white;
     border-top: 1px solid lighten(gray('400'), 5%);
     border-bottom: 1px solid lighten(gray('400'), 5%);
+
+    &:not(.o-composer-is-compact) {
+        border-bottom: 0;
+        border-radius: initial;
+    }
 
     &:last-child:not(.o-composer-has-current-partner-avatar) {
         border-right: 1px solid lighten(gray('400'), 5%);
